# sloam

./: DOCKER_SETUP.md  FULL_STEPS.md  LOCAL_SETUP.md  MODEL_SETUP.md  README.md  install_dependencies.sh
docker/: run_sloam_container.sh
models/: onnx_models.ipynb  squeezesegV2_segmentator.onnx  squeezeseg_segmentator.onnx
sim_envs/forest_simulation/: CMakeLists.txt  README.md  package.xml  setup_forest_simulation.sh
sim_envs/forest_simulation/bags/: sloam_forest_data_2025-03-12-07-06-29.bag
sim_envs/forest_simulation/config/: forest_robot.yaml  husky_control.yaml  husky_control_fix.yaml  husky_control_pid.yaml  robot_control.yaml  twist_mux.yaml
sim_envs/forest_simulation/launch/: environment_test.launch  forest_simulation.launch  forest_sloam.launch  husky_forest_sloam.launch  husky_forest_sloam_fixed.launch  husky_forest_test.launch  husky_lidar_test.launch  husky_segmentation_test.launch  husky_sloam.launch  husky_sloam_vlp16.launch  husky_test.launch  segmentation_test.launch  sloam_test.launch  spawn_robot.launch  test_segmentation.launch  tf_setup.launch
sim_envs/forest_simulation/rviz/: forest_robot.rviz
sim_envs/forest_simulation/scripts/: forest_input_manager.py
sim_envs/forest_simulation/worlds/: grass_plane.world  mrs_city.world  uneven_plane.world
sloam/: CMakeLists.txt  package.xml
sloam_msgs/: CMakeLists.txt  package.xml
sloam_msgs/msg/: LoopClosure.msg  ROSObservation.msg  ROSScan.msg  ROSSubMap.msg  ROSSweep.msg
sloam_pkgs/models/: onnx_seg_export.ipynb
sloam_pkgs/sloam/launch/rviz/: segmentation.rviz  sloam.rviz
sloam_pkgs/sloam/params/: husky.yaml  ouster.yaml  sim.yaml  sloam.yaml
